# MagicReview

./: .gitignore  README.md  pyproject.toml
app/: README.md  __init__.py  main.py  requirements.txt
app/agents/: __init__.py  architecture_agent.py  base.py  bug_agent.py  context.py  coordinator.py  knowledge_agent.py  quality_agent.py  refactor_agent.py  security_agent.py  utils.py
app/analyzers/: __init__.py  ast_analyzer.py  complexity_analyzer.py  dependency_analyzer.py  radon_adapter.py  ruff_adapter.py
app/architecture/: __init__.py  context_builder.py  reviewer.py
app/enterprise/: __init__.py  config_loader.py  engine.py
docs/: architecture_review.md  cli.md  connected_services.md  dashboard.md  enterprise_rules.md  github_app.md  mcp.md  multi_agent.md
examples/: bad_code.py  sample.diff
mcp_server/: __init__.py  main.py  server.py
reviewagent/: __init__.py
tests/: test_architecture_phase5.py  test_cli_phase3.py  test_cli_phase7.py  test_complexity_analyzer.py  test_connected_services_phase10.py  test_dashboard_phase9.py  test_diff_parser.py  test_enterprise_config_loader.py  test_enterprise_engine.py  test_enterprise_integration.py  test_fastapi_phase4.py  test_github_app_phase8.py  test_github_integration.py  test_god_object.py  test_import_graph.py  test_llm_reviewer.py  test_main_security.py  test_mcp_server.py  test_mcp_tools.py  test_phase1_core.py  test_phase3_compatibility.py  test_phase6_agents.py  test_project_reviewer.py  test_project_scanner.py  test_report_formatter.py  test_review_service.py  test_ruff_adapter.py
(+114 files in other folders)
